--- a/src/core/globals.css
+++ b/src/core/globals.css
@@ -5,10 +5,25 @@
 @layer base {
   h1 {
     @apply text-5xl;
-    @apply font-bold;
   }
   h2 {
-    @apply text-xl;
+    @apply text-3xl;
+  }
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply text-[#272343];
+    @apply font-bold;
+  }
+
+  div,
+  p,
+  span {
+    @apply text-[#2d334a];
   }
   /* ... */
 }
